--- a/app/src/main/res/layout/activity_search_coach.xml
+++ b/app/src/main/res/layout/activity_search_coach.xml
@@ -111,7 +111,7 @@
                 android:orientation="horizontal">
 
 
-                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
+                <com.example.cesare.leagueoflegendscoaching.Classes.Components.ToggleImageButton
                     android:id="@+id/flag_UnitedKingdom_ImageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -121,7 +121,7 @@
 
                     android:src="@mipmap/flag_unitedkingdom" />
 
-                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
+                <com.example.cesare.leagueoflegendscoaching.Classes.Components.ToggleImageButton
                     android:id="@+id/flag_Italy_ImageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -131,7 +131,7 @@
 
                     android:src="@mipmap/flag_italy" />
 
-                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
+                <com.example.cesare.leagueoflegendscoaching.Classes.Components.ToggleImageButton
                     android:id="@+id/flag_Germany_ImageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -141,7 +141,7 @@
 
                     android:src="@mipmap/flag_germany" />
 
-                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
+                <com.example.cesare.leagueoflegendscoaching.Classes.Components.ToggleImageButton
                     android:id="@+id/flag_France_ImageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -150,7 +150,7 @@
                     android:background="@drawable/flag_button"
                     android:src="@mipmap/flag_france" />
 
-                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
+                <com.example.cesare.leagueoflegendscoaching.Classes.Components.ToggleImageButton
                     android:id="@+id/flag_Spain_ImageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
