--- a/app/src/main/res/layout/activity_day_schedule.xml
+++ b/app/src/main/res/layout/activity_day_schedule.xml
@@ -47,6 +47,7 @@
                         android:id="@+id/zero_to_one"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/zero_to_one"
                         android:textOff="@string/zero_to_one" />
@@ -61,6 +62,7 @@
                         android:id="@+id/one_to_two"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/one_to_two"
                         android:textOff="@string/one_to_two" />
@@ -75,6 +77,7 @@
                         android:id="@+id/two_to_three"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/two_to_three"
                         android:textOff="@string/two_to_three" />
@@ -89,6 +92,7 @@
                         android:id="@+id/three_to_four"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/three_to_four"
                         android:textOff="@string/three_to_four" />
@@ -103,6 +107,7 @@
                         android:id="@+id/four_to_five"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/four_to_five"
                         android:textOff="@string/four_to_five" />
@@ -117,6 +122,7 @@
                         android:id="@+id/five_to_six"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/five_to_six"
                         android:textOff="@string/five_to_six" />
@@ -131,6 +137,7 @@
                         android:id="@+id/six_to_seven"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/six_to_seven"
                         android:textOff="@string/six_to_seven" />
@@ -145,6 +152,7 @@
                         android:id="@+id/seven_to_eight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/seven_to_eight"
                         android:textOff="@string/seven_to_eight" />
@@ -159,6 +167,7 @@
                         android:id="@+id/eight_to_nine"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/eight_to_nine"
                         android:textOff="@string/eight_to_nine" />
@@ -173,6 +182,7 @@
                         android:id="@+id/nine_to_ten"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/nine_to_ten"
                         android:textOff="@string/nine_to_ten" />
@@ -187,6 +197,7 @@
                         android:id="@+id/ten_to_eleven"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/ten_to_eleven"
                         android:textOff="@string/ten_to_eleven" />
@@ -201,6 +212,7 @@
                         android:id="@+id/eleven_to_twelve"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/eleven_to_twelve"
                         android:textOff="@string/eleven_to_twelve" />
@@ -215,6 +227,7 @@
                         android:id="@+id/twelve_to_thirteen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/twelve_to_thirteen"
                         android:textOff="@string/twelve_to_thirteen" />
@@ -229,6 +242,7 @@
                         android:id="@+id/thirteen_to_fourteen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/thirteen_to_fourteen"
                         android:textOff="@string/thirteen_to_fourteen" />
@@ -243,6 +257,7 @@
                         android:id="@+id/fourteen_to_fifteen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/fourteen_to_fifteen"
                         android:textOff="@string/fourteen_to_fifteen" />
@@ -257,6 +272,7 @@
                         android:id="@+id/fifteen_to_sixteen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/fifteen_to_sixteen"
                         android:textOff="@string/fifteen_to_sixteen" />
@@ -271,6 +287,7 @@
                         android:id="@+id/sixteen_to_seventeen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/sixteen_to_seventeen"
                         android:textOff="@string/sixteen_to_seventeen" />
@@ -285,6 +302,7 @@
                         android:id="@+id/seventeen_to_eighteen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/seventeen_to_eighteen"
                         android:textOff="@string/seventeen_to_eighteen" />
@@ -299,6 +317,7 @@
                         android:id="@+id/eighteen_to_nineteen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/eighteen_to_nineteen"
                         android:textOff="@string/eighteen_to_nineteen" />
@@ -313,6 +332,7 @@
                         android:id="@+id/nineteen_to_twenty"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/nineteen_to_twenty"
                         android:textOff="@string/nineteen_to_twenty" />
@@ -327,6 +347,7 @@
                         android:id="@+id/twenty_to_twentyone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/twenty_to_twentyone"
                         android:textOff="@string/twenty_to_twentyone" />
@@ -341,6 +362,7 @@
                         android:id="@+id/twentyone_to_twentytwo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/twentyone_to_twentytwo"
                         android:textOff="@string/twentyone_to_twentytwo" />
@@ -355,6 +377,7 @@
                         android:id="@+id/twentytwo_to_twentythree"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/twentytwo_to_twentythree"
                         android:textOff="@string/twentytwo_to_twentythree" />
@@ -369,6 +392,7 @@
                         android:id="@+id/twentythree_to_twentyfour"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/book_toggle_button"
                         android:textSize="@dimen/label"
                         android:textOn="@string/twentythree_to_twentyfour"
                         android:textOff="@string/twentythree_to_twentyfour" />
