--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="selected_flag">#0000FF</color>
+
+    <color name="white">#ffffff</color>
+    <color name="green">#00ff00</color>
+
 </resources>
