--- a/app/src/main/res/layout/activity_sunday_schedule.xml
+++ b/app/src/main/res/layout/activity_sunday_schedule.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/title_text"
-                android:text="@string/registerSchedule"
+                android:text="@string/sunday_schedule"
                 android:textAlignment="center" />
 
         </LinearLayout>
