--- a/app/src/main/res/layout/activity_coach_area.xml
+++ b/app/src/main/res/layout/activity_coach_area.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="17dp"
             android:text="@string/coachArea"
             android:textAlignment="center"
-            android:textSize="@dimen/title_text" />
+            style="@style/TitleStyle" />
 
         <TextView
             android:id="@+id/welcomeMessage"
@@ -32,7 +32,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="27dp"
             android:textAlignment="center"
-            android:textSize="20sp" />
+            style="@style/LabelStyle" />
 
         <Button
             android:id="@+id/apppointments_button"
@@ -42,7 +42,9 @@
             android:textSize="@dimen/button_text"
             android:layout_above="@+id/modify_button"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="51dp" />
+            android:layout_marginBottom="51dp"
+            android:background="@drawable/custom_button"
+            style="@style/ButtonStyle"/>
 
         <Button
             android:id="@+id/modify_button"
@@ -53,7 +55,9 @@
             android:layout_alignParentBottom="true"
             android:layout_alignLeft="@+id/apppointments_button"
             android:layout_alignStart="@+id/apppointments_button"
-            android:layout_marginBottom="162dp" />
+            android:layout_marginBottom="162dp"
+            android:background="@drawable/custom_button"
+            style="@style/ButtonStyle" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
