--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,32 +30,34 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="24dp"
-            android:text="@string/title"
             android:textAlignment="center"
-            android:textSize="@dimen/title_text" />
+            android:text="@string/title"
+            style="@style/TitleStyle"/>
 
         <Button
             android:id="@+id/login_button"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/button_height"
             android:text="@string/login"
-            android:textSize="@dimen/button_text"
             android:layout_marginTop="90dp"
             android:layout_below="@+id/title_text"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/custom_button"
+            style="@style/ButtonStyle"/>
 
         <Button
-            android:id="@+id/signup_button"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/button_height"
+            android:id="@+id/signup_button"
             android:text="@string/sign_up"
-            android:textSize="@dimen/button_text"
             tools:layout_editor_absoluteX="136dp"
             tools:layout_editor_absoluteY="119dp"
             android:layout_below="@+id/login_button"
             android:layout_alignLeft="@+id/login_button"
             android:layout_alignStart="@+id/login_button"
-            android:layout_marginTop="74dp" />
+            android:layout_marginTop="74dp"
+            android:background="@drawable/custom_button"
+            style="@style/ButtonStyle"/>
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
