--- a/app/src/main/res/layout/coach_frame.xml
+++ b/app/src/main/res/layout/coach_frame.xml
@@ -42,7 +42,8 @@
                         android:id="@+id/name"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:textSize="@dimen/label"/>
+                        android:textSize="@dimen/label"
+                        style="@style/LabelStyle"/>
 
                 </LinearLayout>
 
@@ -56,7 +57,8 @@
                         android:id="@+id/cost"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:textSize="@dimen/label"/>
+                        android:textSize="@dimen/label"
+                        style="@style/LabelStyle"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -78,7 +80,8 @@
                         android:id="@+id/roles"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:textSize="@dimen/label"/>
+                        android:textSize="@dimen/label"
+                        style="@style/LabelStyle"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -92,7 +95,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/details"
-                        android:textSize="@dimen/label"/>
+                        android:textSize="@dimen/label"
+                        android:background="@drawable/custom_button"
+                        style="@style/ButtonStyle"/>
                 </LinearLayout>
 
             </LinearLayout>
