--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,24 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:background">@color/background</item>
+    </style>
+
+    <style name="ButtonStyle" parent="Widget.AppCompat.Button.Small">
+        <item name="android:textColor">@color/button_text</item>
+        <item name="android:textSize">@dimen/button_text</item>
+    </style>
+
+    <style name="TitleStyle">
+        <item name="android:textColor">@color/title</item>
+        <item name="android:textSize">@dimen/title_text</item>
+    </style>
+
+    <style name="LabelStyle">
+        <item name="android:textColor">@color/label</item>
+        <item name="android:textSize">@dimen/label</item>
     </style>
 
 </resources>
