--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:background">@color/background</item>
+        <!--<item name="android:background">@color/background</item> -->
     </style>
 
     <style name="ButtonStyle" parent="Widget.AppCompat.Button.Small">
