but first a toast

--- a/app/src/main/res/layout/activity_coach_registration.xml
+++ b/app/src/main/res/layout/activity_coach_registration.xml
@@ -26,12 +26,12 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="18dp"
             android:text="@string/coachRegistration"
             android:textAlignment="center"
-            android:textSize="@dimen/title_text"
+            android:layout_margin="@dimen/margin"
             tools:layout_editor_absoluteX="163dp"
-            tools:layout_editor_absoluteY="38dp" />
+            tools:layout_editor_absoluteY="38dp"
+            style="@style/TitleStyle"/>
 
         <LinearLayout
             android:id="@+id/linear_registration"
@@ -40,7 +40,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/coachRegistration_title"
-            android:layout_marginTop="31dp"
+            android:layout_margin="@dimen/margin"
             android:orientation="vertical">
 
             <LinearLayout
@@ -59,13 +59,16 @@
                     android:paddingRight="@dimen/padding"
                     android:paddingTop="@dimen/padding"
                     android:text="@string/elo"
-                    android:textSize="@dimen/label" />
+                    style="@style/LabelStyle" />
 
                 <Spinner
                     android:id="@+id/elo_spinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:layout_marginRight="@dimen/margin"
+                    android:background="@drawable/custom_spinner"
+                    android:textColor="@color/white"/>
 
             </LinearLayout>
 
@@ -76,7 +79,7 @@
                 android:padding="@dimen/padding"
 
                 android:text="@string/language"
-                android:textSize="@dimen/label" />
+                style="@style/LabelStyle" />
 
 
             <LinearLayout
@@ -141,7 +144,7 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/padding"
                 android:text="@string/roles"
-                android:textSize="@dimen/label" />
+                style="@style/LabelStyle"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -152,13 +155,18 @@
                     android:id="@+id/role1_spinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_spinner"
+                    android:textColor="@color/white"/>
 
                 <Spinner
                     android:id="@+id/role2_spinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+
+                    android:background="@drawable/custom_spinner"
+                    android:textColor="@color/white"/>
 
             </LinearLayout>
 
@@ -176,7 +184,7 @@
 
                     android:padding="@dimen/padding"
                     android:text="@string/cost"
-                    android:textSize="@dimen/label" />
+                    style="@style/LabelStyle" />
 
                 <EditText
                     android:id="@+id/cost_input"
@@ -185,7 +193,11 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:text="0"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:layout_marginRight="@dimen/margin"
+                    android:background="@drawable/custom_edit_text"
+                    android:textColor="@color/white"
+                    android:textCursorDrawable="@color/white"/>
             </LinearLayout>
 
             <TextView
@@ -195,7 +207,7 @@
                 android:padding="@dimen/padding"
 
                 android:text="@string/schedule"
-                android:textSize="@dimen/label"/>
+                style="@style/LabelStyle" />
 
             <RelativeLayout
                 android:id="@+id/schedule_layout"
@@ -220,9 +232,10 @@
             android:layout_height="@dimen/button_height"
             android:layout_alignParentRight="true"
             android:layout_below="@id/linear_registration"
-            android:layout_marginTop="@dimen/margin"
+            android:layout_margin="@dimen/margin"
             android:text="@string/coach_signup"
-            android:textSize="@dimen/button_text" />
+            android:background="@drawable/custom_button"
+            style="@style/ButtonStyle" />
 
     </RelativeLayout>
     </ScrollView>
