--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,8 @@
                 android:inputType="text"
                 android:layout_margin="@dimen/margin"
                 android:background="@drawable/custom_edit_text"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textCursorDrawable="@color/white"/>
 
             <TextView
                 android:id="@+id/passwordLogin_label"
@@ -73,7 +74,8 @@
                 android:inputType="textPassword"
                 android:layout_margin="@dimen/margin"
                 android:background="@drawable/custom_edit_text"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textCursorDrawable="@color/white"/>
 
         </LinearLayout>
 
