--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -110,7 +110,7 @@
             android:layout_height="@dimen/button_height"
             android:layout_alignParentRight="true"
             android:layout_below="@id/linear_login"
-            android:layout_marginTop="@dimen/margin"
+            android:layout_margin="@dimen/margin"
             android:text="@string/sign_up"
             android:background="@drawable/custom_button"
             style="@style/ButtonStyle" />
